--- a/experimental/mmlparser/src/Makefile.am
+++ b/experimental/mmlparser/src/Makefile.am
@@ -1,2 +1,2 @@
 bin_PROGRAMS = mmlparser
-mmlparser_SOURCES = main.cpp
+mmlparser_SOURCES = main.cpp Parser.cpp Parser.h Element.cpp Element.h Config.h Config.cpp
