--- a/contrib/Makefile
+++ b/contrib/Makefile
@@ -34,6 +34,7 @@ all:
 	cd X/glaunch && touch dependencies && $(MAKE) && $(MAKE) install
 	cd Misc/gnote && touch dependencies && $(MAKE) && $(MAKE) install
 	cd Multimedia/xmonapeg && touch dependencies && $(MAKE) && $(MAKE) install
+#	cd Emulators/monasq && touch dependencies && $(MAKE) && $(MAKE) install
 ### Network applications
 	cd Net/libnet/sample/giko && $(MAKE) && $(MAKE) install
 ### Append
