--- a/contrib/Graphics/libbaygui/BAYGUI.INI
+++ b/contrib/Graphics/libbaygui/BAYGUI.INI
@@ -1,5 +1,6 @@
 [General]
-Run=/APPS/BAYGUI/GLAUNCH.EX5
+#Run=/APPS/BAYGUI/GLAUNCH.EX5
+Run=/APPS/BAYGUI/MONASQ.EX5
 
 [Wallpaper]
 Source=/APPS/MONAWALL.BM5
