--- a/experimental/higepon/scheme/test_cpp/Makefile.am
+++ b/experimental/higepon/scheme/test_cpp/Makefile.am
@@ -8,12 +8,56 @@ MacroMatchTest.h\
 MacroMatchTest.cpp\
 MacroTranslateTest.h\
 MacroTranslateTest.cpp\
+../src/Translator.h\
+../src/Translator.cpp\
 ../src/Tokenizer.cpp\
 ../src/Tokenizer.h\
+../src/Number.cpp\
+../src/Number.h\
+../src/String.cpp\
+../src/String.h\
+../src/Definition.cpp\
+../src/Definition.h\
+../src/Object.cpp\
+../src/Object.h\
+../src/Quote.cpp\
+../src/Quote.h\
+../src/Variable.cpp\
+../src/Variable.h\
+../src/Assignment.cpp\
+../src/Assignment.h\
+../src/SpecialIf.cpp\
+../src/SpecialIf.h\
+../src/Frame.cpp\
+../src/Frame.h\
+../src/Environment.cpp\
+../src/Environment.h\
+../src/Lambda.cpp\
+../src/Lambda.h\
+../src/Procedure.cpp\
+../src/Procedure.h\
+../src/Begin.cpp\
+../src/Begin.h\
 ../src/Node.h\
 ../src/Node.cpp\
 ../src/scheme.h\
 ../src/Macro.h\
 ../src/Macro.cpp\
 ../src/Parser.h\
-../src/Parser.cpp
+../src/Parser.cpp\
+../src/Cond.cpp\
+../src/Cond.h\
+../src/Pair.cpp\
+../src/Pair.h\
+../src/And.cpp\
+../src/And.h\
+../src/Or.cpp\
+../src/Or.h\
+../src/Let.cpp\
+../src/Let.h\
+../src/LetAsterisk.cpp\
+../src/LetAsterisk.h\
+../src/scheme.cpp\
+../src/scheme.h\
+../src/Application.cpp\
+../src/Application.h
