--- a/experimental/higepon/scheme/test_cpp/Makefile.in
+++ b/experimental/higepon/scheme/test_cpp/Makefile.in
@@ -50,8 +50,19 @@ PROGRAMS = $(bin_PROGRAMS)
 am_test_cpp_OBJECTS = test_cpp-main.$(OBJEXT) test_cpp-yaml.$(OBJEXT) \
 	test_cpp-MacroMatchTest.$(OBJEXT) \
 	test_cpp-MacroTranslateTest.$(OBJEXT) \
-	test_cpp-Tokenizer.$(OBJEXT) test_cpp-Node.$(OBJEXT) \
-	test_cpp-Macro.$(OBJEXT) test_cpp-Parser.$(OBJEXT)
+	test_cpp-Translator.$(OBJEXT) test_cpp-Tokenizer.$(OBJEXT) \
+	test_cpp-Number.$(OBJEXT) test_cpp-String.$(OBJEXT) \
+	test_cpp-Definition.$(OBJEXT) test_cpp-Object.$(OBJEXT) \
+	test_cpp-Quote.$(OBJEXT) test_cpp-Variable.$(OBJEXT) \
+	test_cpp-Assignment.$(OBJEXT) test_cpp-SpecialIf.$(OBJEXT) \
+	test_cpp-Frame.$(OBJEXT) test_cpp-Environment.$(OBJEXT) \
+	test_cpp-Lambda.$(OBJEXT) test_cpp-Procedure.$(OBJEXT) \
+	test_cpp-Begin.$(OBJEXT) test_cpp-Node.$(OBJEXT) \
+	test_cpp-Macro.$(OBJEXT) test_cpp-Parser.$(OBJEXT) \
+	test_cpp-Cond.$(OBJEXT) test_cpp-Pair.$(OBJEXT) \
+	test_cpp-And.$(OBJEXT) test_cpp-Or.$(OBJEXT) \
+	test_cpp-Let.$(OBJEXT) test_cpp-LetAsterisk.$(OBJEXT) \
+	test_cpp-scheme.$(OBJEXT) test_cpp-Application.$(OBJEXT)
 test_cpp_OBJECTS = $(am_test_cpp_OBJECTS)
 test_cpp_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
@@ -161,15 +172,59 @@ MacroMatchTest.h\
 MacroMatchTest.cpp\
 MacroTranslateTest.h\
 MacroTranslateTest.cpp\
+../src/Translator.h\
+../src/Translator.cpp\
 ../src/Tokenizer.cpp\
 ../src/Tokenizer.h\
+../src/Number.cpp\
+../src/Number.h\
+../src/String.cpp\
+../src/String.h\
+../src/Definition.cpp\
+../src/Definition.h\
+../src/Object.cpp\
+../src/Object.h\
+../src/Quote.cpp\
+../src/Quote.h\
+../src/Variable.cpp\
+../src/Variable.h\
+../src/Assignment.cpp\
+../src/Assignment.h\
+../src/SpecialIf.cpp\
+../src/SpecialIf.h\
+../src/Frame.cpp\
+../src/Frame.h\
+../src/Environment.cpp\
+../src/Environment.h\
+../src/Lambda.cpp\
+../src/Lambda.h\
+../src/Procedure.cpp\
+../src/Procedure.h\
+../src/Begin.cpp\
+../src/Begin.h\
 ../src/Node.h\
 ../src/Node.cpp\
 ../src/scheme.h\
 ../src/Macro.h\
 ../src/Macro.cpp\
 ../src/Parser.h\
-../src/Parser.cpp
+../src/Parser.cpp\
+../src/Cond.cpp\
+../src/Cond.h\
+../src/Pair.cpp\
+../src/Pair.h\
+../src/And.cpp\
+../src/And.h\
+../src/Or.cpp\
+../src/Or.h\
+../src/Let.cpp\
+../src/Let.h\
+../src/LetAsterisk.cpp\
+../src/LetAsterisk.h\
+../src/scheme.cpp\
+../src/scheme.h\
+../src/Application.cpp\
+../src/Application.h
 
 all: all-am
 
@@ -267,11 +322,95 @@ test_cpp-MacroTranslateTest.o: MacroTranslateTest.cpp
 test_cpp-MacroTranslateTest.obj: MacroTranslateTest.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-MacroTranslateTest.obj `if test -f 'MacroTranslateTest.cpp'; then $(CYGPATH_W) 'MacroTranslateTest.cpp'; else $(CYGPATH_W) '$(srcdir)/MacroTranslateTest.cpp'; fi`
 
+test_cpp-Translator.o: ../src/Translator.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Translator.o `test -f '../src/Translator.cpp' || echo '$(srcdir)/'`../src/Translator.cpp
+
+test_cpp-Translator.obj: ../src/Translator.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Translator.obj `if test -f '../src/Translator.cpp'; then $(CYGPATH_W) '../src/Translator.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Translator.cpp'; fi`
+
 test_cpp-Tokenizer.o: ../src/Tokenizer.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Tokenizer.o `test -f '../src/Tokenizer.cpp' || echo '$(srcdir)/'`../src/Tokenizer.cpp
 
 test_cpp-Tokenizer.obj: ../src/Tokenizer.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Tokenizer.obj `if test -f '../src/Tokenizer.cpp'; then $(CYGPATH_W) '../src/Tokenizer.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Tokenizer.cpp'; fi`
+
+test_cpp-Number.o: ../src/Number.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Number.o `test -f '../src/Number.cpp' || echo '$(srcdir)/'`../src/Number.cpp
+
+test_cpp-Number.obj: ../src/Number.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Number.obj `if test -f '../src/Number.cpp'; then $(CYGPATH_W) '../src/Number.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Number.cpp'; fi`
+
+test_cpp-String.o: ../src/String.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-String.o `test -f '../src/String.cpp' || echo '$(srcdir)/'`../src/String.cpp
+
+test_cpp-String.obj: ../src/String.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-String.obj `if test -f '../src/String.cpp'; then $(CYGPATH_W) '../src/String.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/String.cpp'; fi`
+
+test_cpp-Definition.o: ../src/Definition.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Definition.o `test -f '../src/Definition.cpp' || echo '$(srcdir)/'`../src/Definition.cpp
+
+test_cpp-Definition.obj: ../src/Definition.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Definition.obj `if test -f '../src/Definition.cpp'; then $(CYGPATH_W) '../src/Definition.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Definition.cpp'; fi`
+
+test_cpp-Object.o: ../src/Object.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Object.o `test -f '../src/Object.cpp' || echo '$(srcdir)/'`../src/Object.cpp
+
+test_cpp-Object.obj: ../src/Object.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Object.obj `if test -f '../src/Object.cpp'; then $(CYGPATH_W) '../src/Object.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Object.cpp'; fi`
+
+test_cpp-Quote.o: ../src/Quote.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Quote.o `test -f '../src/Quote.cpp' || echo '$(srcdir)/'`../src/Quote.cpp
+
+test_cpp-Quote.obj: ../src/Quote.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Quote.obj `if test -f '../src/Quote.cpp'; then $(CYGPATH_W) '../src/Quote.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Quote.cpp'; fi`
+
+test_cpp-Variable.o: ../src/Variable.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Variable.o `test -f '../src/Variable.cpp' || echo '$(srcdir)/'`../src/Variable.cpp
+
+test_cpp-Variable.obj: ../src/Variable.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Variable.obj `if test -f '../src/Variable.cpp'; then $(CYGPATH_W) '../src/Variable.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Variable.cpp'; fi`
+
+test_cpp-Assignment.o: ../src/Assignment.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Assignment.o `test -f '../src/Assignment.cpp' || echo '$(srcdir)/'`../src/Assignment.cpp
+
+test_cpp-Assignment.obj: ../src/Assignment.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Assignment.obj `if test -f '../src/Assignment.cpp'; then $(CYGPATH_W) '../src/Assignment.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Assignment.cpp'; fi`
+
+test_cpp-SpecialIf.o: ../src/SpecialIf.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-SpecialIf.o `test -f '../src/SpecialIf.cpp' || echo '$(srcdir)/'`../src/SpecialIf.cpp
+
+test_cpp-SpecialIf.obj: ../src/SpecialIf.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-SpecialIf.obj `if test -f '../src/SpecialIf.cpp'; then $(CYGPATH_W) '../src/SpecialIf.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/SpecialIf.cpp'; fi`
+
+test_cpp-Frame.o: ../src/Frame.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Frame.o `test -f '../src/Frame.cpp' || echo '$(srcdir)/'`../src/Frame.cpp
+
+test_cpp-Frame.obj: ../src/Frame.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Frame.obj `if test -f '../src/Frame.cpp'; then $(CYGPATH_W) '../src/Frame.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Frame.cpp'; fi`
+
+test_cpp-Environment.o: ../src/Environment.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Environment.o `test -f '../src/Environment.cpp' || echo '$(srcdir)/'`../src/Environment.cpp
+
+test_cpp-Environment.obj: ../src/Environment.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Environment.obj `if test -f '../src/Environment.cpp'; then $(CYGPATH_W) '../src/Environment.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Environment.cpp'; fi`
+
+test_cpp-Lambda.o: ../src/Lambda.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Lambda.o `test -f '../src/Lambda.cpp' || echo '$(srcdir)/'`../src/Lambda.cpp
+
+test_cpp-Lambda.obj: ../src/Lambda.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Lambda.obj `if test -f '../src/Lambda.cpp'; then $(CYGPATH_W) '../src/Lambda.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Lambda.cpp'; fi`
+
+test_cpp-Procedure.o: ../src/Procedure.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Procedure.o `test -f '../src/Procedure.cpp' || echo '$(srcdir)/'`../src/Procedure.cpp
+
+test_cpp-Procedure.obj: ../src/Procedure.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Procedure.obj `if test -f '../src/Procedure.cpp'; then $(CYGPATH_W) '../src/Procedure.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Procedure.cpp'; fi`
+
+test_cpp-Begin.o: ../src/Begin.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Begin.o `test -f '../src/Begin.cpp' || echo '$(srcdir)/'`../src/Begin.cpp
+
+test_cpp-Begin.obj: ../src/Begin.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Begin.obj `if test -f '../src/Begin.cpp'; then $(CYGPATH_W) '../src/Begin.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Begin.cpp'; fi`
 
 test_cpp-Node.o: ../src/Node.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Node.o `test -f '../src/Node.cpp' || echo '$(srcdir)/'`../src/Node.cpp
@@ -290,6 +429,54 @@ test_cpp-Parser.o: ../src/Parser.cpp
 
 test_cpp-Parser.obj: ../src/Parser.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Parser.obj `if test -f '../src/Parser.cpp'; then $(CYGPATH_W) '../src/Parser.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Parser.cpp'; fi`
+
+test_cpp-Cond.o: ../src/Cond.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Cond.o `test -f '../src/Cond.cpp' || echo '$(srcdir)/'`../src/Cond.cpp
+
+test_cpp-Cond.obj: ../src/Cond.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Cond.obj `if test -f '../src/Cond.cpp'; then $(CYGPATH_W) '../src/Cond.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Cond.cpp'; fi`
+
+test_cpp-Pair.o: ../src/Pair.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Pair.o `test -f '../src/Pair.cpp' || echo '$(srcdir)/'`../src/Pair.cpp
+
+test_cpp-Pair.obj: ../src/Pair.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Pair.obj `if test -f '../src/Pair.cpp'; then $(CYGPATH_W) '../src/Pair.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Pair.cpp'; fi`
+
+test_cpp-And.o: ../src/And.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-And.o `test -f '../src/And.cpp' || echo '$(srcdir)/'`../src/And.cpp
+
+test_cpp-And.obj: ../src/And.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-And.obj `if test -f '../src/And.cpp'; then $(CYGPATH_W) '../src/And.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/And.cpp'; fi`
+
+test_cpp-Or.o: ../src/Or.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Or.o `test -f '../src/Or.cpp' || echo '$(srcdir)/'`../src/Or.cpp
+
+test_cpp-Or.obj: ../src/Or.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Or.obj `if test -f '../src/Or.cpp'; then $(CYGPATH_W) '../src/Or.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Or.cpp'; fi`
+
+test_cpp-Let.o: ../src/Let.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Let.o `test -f '../src/Let.cpp' || echo '$(srcdir)/'`../src/Let.cpp
+
+test_cpp-Let.obj: ../src/Let.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Let.obj `if test -f '../src/Let.cpp'; then $(CYGPATH_W) '../src/Let.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Let.cpp'; fi`
+
+test_cpp-LetAsterisk.o: ../src/LetAsterisk.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-LetAsterisk.o `test -f '../src/LetAsterisk.cpp' || echo '$(srcdir)/'`../src/LetAsterisk.cpp
+
+test_cpp-LetAsterisk.obj: ../src/LetAsterisk.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-LetAsterisk.obj `if test -f '../src/LetAsterisk.cpp'; then $(CYGPATH_W) '../src/LetAsterisk.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/LetAsterisk.cpp'; fi`
+
+test_cpp-scheme.o: ../src/scheme.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-scheme.o `test -f '../src/scheme.cpp' || echo '$(srcdir)/'`../src/scheme.cpp
+
+test_cpp-scheme.obj: ../src/scheme.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-scheme.obj `if test -f '../src/scheme.cpp'; then $(CYGPATH_W) '../src/scheme.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/scheme.cpp'; fi`
+
+test_cpp-Application.o: ../src/Application.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Application.o `test -f '../src/Application.cpp' || echo '$(srcdir)/'`../src/Application.cpp
+
+test_cpp-Application.obj: ../src/Application.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Application.obj `if test -f '../src/Application.cpp'; then $(CYGPATH_W) '../src/Application.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Application.cpp'; fi`
 uninstall-info-am:
 
 ID: $(HEADERS) $(SOURCES) $(LISP) $(TAGS_FILES)
