--- a/experimental/higepon/scheme/test_cpp/Makefile.in
+++ b/experimental/higepon/scheme/test_cpp/Makefile.in
@@ -163,7 +163,7 @@ sbindir = @sbindir@
 sharedstatedir = @sharedstatedir@
 sysconfdir = @sysconfdir@
 target_alias = @target_alias@
-test_cpp_CXXFLAGS = -g -Wall -O3 -I../src -I /usr/local/include/gc -DGC_OPERATOR_NEW_ARRAY -DUSE_BOEHM_GC -O0 -gstabs+ -Wall
+test_cpp_CXXFLAGS = -g -Wall -O3 -I../src -I /usr/local/include/gc -DGC_OPERATOR_NEW_ARRAY -DUSE_BOEHM_GC -O0 -gstabs+ -Wall -DTRACE_MACRO
 test_cpp_LDFLAGS = -lcppunit -lgc
 test_cpp_SOURCES = main.cpp\
 yaml.cpp\
